# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import friendsRouter from "./friends";
 import contactsRouter from "./contacts";
+import messagesRouter from "./messages";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(friendsRouter);
 router.use(contactsRouter);
+router.use(messagesRouter);
 
 export default router;
